# my-budget-server

./: .env.example  Cargo.toml  README.md
.github/workflows/: build.yml
benches/: records_bench.rs
src/: auth.rs  categories.rs  config.rs  constants.rs  database.rs  lib.rs  main.rs  models.rs  records.rs  utils.rs
tests/: categories_test.rs  helper_functions_test.rs  records_test.rs
tests/common/: mod.rs
