[package]
name = "my-budget-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "my_budget_server"
path = "src/lib.rs"

[[bin]]
name = "my-budget-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = "0.8.4"
dotenv = "0.15.0"
libsql = "0.9.11"
password-hash = { version = "0.5.0", features = ["rand_core"] }
serde = { version = "1.0.219", features = ["derive"] }
time = "0.3.41"
tokio = { version = "1.46.0", features = ["full"] }
tower-sessions = { version = "0.14.0", features = ["axum-core", "memory-store", "signed"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.8.1"
tokio-test = "0.4"
